--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -49,7 +49,66 @@
     height: auto;
 }
 
+.about__heading {
+    z-index: 2;
+    max-width: 400;
 }
+
+.about__header {
+    font-size: 42px;
+}
+
+.about__discription {
+    font-size: 16px;
+}
+
+.about__sub-discription {
+    font-size: 12px;
+}
+
+.about__video {
+    opacity: 0.5;
+}
+
+.about__cards {
+    flex-wrap: wrap;
+}
+
+.popular__header {
+    font-size: 42px
+}
+
+.popular__choise {
+    flex-wrap: wrap;
+}
+
+.price-header {
+    font-size: 42px
+}
+
+.price-topics {
+    flex-wrap: wrap;
+}
+
+.masters-logo {
+    font-size: 42px
+}
+
+.masters__cards {
+    flex-wrap: wrap;
+}
+
+.works__header-name {
+    font-size: 42px 
+}
+
+.registration-header {
+    font-size: 42px  
+}
+
+}
+
+
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px) {
@@ -82,7 +141,18 @@
         text-align: center;
     }
 
+    .registration-twopoint {
+        flex-wrap: wrap;
+    }
+
     
+
+.bands-list {
+    flex-direction: column;
+        align-items: center;
+        justify-content: center;
+}
+
 }
 
 /* Custom, iPhone Retina */
