--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -487,7 +487,7 @@ color:#00BF78;
     font-weight: 400;
 }
 
-.bands-list {
+.brands-list {
     margin-top: 40px;
     max-width: 920px;
     display: flex;
